--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "server": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
